--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,9 @@ jobs:
 
     - name: download cidr
       run: |
-        wget --no-check-certificate -cqO- http://ftp.apnic.net/apnic/stats/apnic/delegated-apnic-latest | grep "apnic|CN|ipv4|" | awk -F'|' '{print $4"/"32-log($5)/log(2)}' >IPchnroute
+        wget --no-check-certificate -cqO- http://ftp.apnic.net/apnic/stats/apnic/delegated-apnic-latest | grep "apnic|CN|ipv4|" | awk -F'|' '{print $4"/"32-log($5)/log(2)}' >IPchnroute1
+        wget --no-check-certificate -cqO- https://raw.githubusercontent.com/17mon/china_ip_list/master/china_ip_list.txt >>IPchnroute2
+        cat IPchnroute1 IPchnroute2 | sort | uniq >IPchnroute
         sha256sum IPchnroute | awk '{print$1}' >IPchnroute.sha256sum
         chmod +x ros-dpbr.sh
         ./ros-dpbr.sh
