--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,9 @@ jobs:
         wget --no-check-certificate -cqO- https://raw.githubusercontent.com/17mon/china_ip_list/master/china_ip_list.txt >>IPchnroute2
         cat IPchnroute1 IPchnroute2 | sort | uniq >IPchnroute
         sha256sum IPchnroute | awk '{print$1}' >IPchnroute.sha256sum
+        rm -rf IPchnroute1
+        rm -rf IPchnroute2
+        
         chmod +x ros-dpbr.sh
         ./ros-dpbr.sh
         
