--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,11 +24,8 @@ jobs:
         chmod +x ros-dpbr.sh
         ./ros-dpbr.sh
 
-        chmod +x SmartDNS_chnlist.sh
-        ./SmartDNS_chnlist.sh
-
-        chmod +x mosdns_chnlist.sh
-        ./mosdns_chnlist.sh
+        chmod +x Domains_chnlist.sh.sh
+        ./Domains_chnlist.sh.sh
 
     - name: Commit & Push changes
       uses: actions-js/push@master
