--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,7 @@ build_pbr:
     - git config --global user.name "${GITLAB_USER_NAME:-ci-bot}"
     - git config --global user.email "${GITLAB_USER_EMAIL:-ci-bot@example.com}"
   script:
-    - bash <<'SCRIPT'
+    - |
       set -euo pipefail
       
       rm -rf /tmp/chnroute
@@ -57,4 +57,6 @@ build_pbr:
       
       cd "${CI_PROJECT_DIR}"
       rm -rf /tmp/chnroute
-      SCRIPT
+  after_script:
+    - cd /
+    - rm -rf "${CI_PROJECT_DIR}"
